# space-game

./: .gitignore  Concept.txt  LICENSE  Makefile.am  README.md  README.org  TODO.org  configure.ac
inc/carrier/: carrier.h  carrierArtillery.h  carrierEngine.h  carrierHangar.h  carrierItem.h  carrierShield.h  carrierTurret.h
inc/core/: buyable.h  coordinate.h  draw.h  entity.h  event.h  game.h  hashtable.h  inventory.h  pt.h  resource.h  tile.h
inc/ship/: ship.h  shipItem.h  shipShield.h  shipWeapon.h  stats.h
src/: Makefile.am  carrier.c  carrier.h  carrierArtillery.h  carrierEngine.h  carrierHangar.c  carrierHangar.h  carrierShield.h  carrierTurret.h  coordinate.c  coordinate.h  draw.c  draw.h  entity.h  event.c  event.h  game.c  game.h  hashdemo.c  item.h  main.c  shield.h  ship.c  ship.h  shipItem.h  shipShield.h  shipTester  shipTester.c  shipWeapon.h  weapon.h
src/carrier/: carrier.c  carrierHangar.c
src/core/: coordinate.c  draw.c  event.c  game.c  hashtable.c  inventory.c  main.c  pt.c  resource.c  tile.c
src/ship/: ship.c  shipTester.c  stats.c
